# quantreno

./: .gitignore  CLAUDE.md  kalshi_sop.md
.claude/: launch.json
.github/: dependabot.yml
docs/: system-diagrams.md
kalshi-saas/: WORKFLOW.md
kalshi-saas/docs/: ARCH.md  INFRASTRUCTURE.md  PLAN.md  TAXONOMY.md  VISION.md
saas/: PROGRESS_LOG.md  SDS.md  UP_NEXT.md  WORKFLOW.md
saas/chatbot/: README.md  package.json  pnpm-lock.yaml  proxy.ts  vitest.config.ts  vitest.setup.ts
saas/chatbot/__tests__/helpers/: auth.ts  request.ts
saas/chatbot/app/: globals.css  layout.tsx  page.tsx
saas/chatbot/app/(auth)/: auth.config.ts  auth.ts  layout.tsx
saas/chatbot/app/(chat)/: layout.tsx
saas/chatbot/app/design-system/: layout.tsx  page.tsx
saas/chatbot/components/: app-sidebar.tsx  auth-form.tsx  chat-header.tsx  kalshi-connection-form.tsx  message.tsx  sidebar-history.tsx  sidebar-user-nav.tsx  submit-button.tsx  suggested-actions.tsx  theme-switch.tsx
saas/chatbot/components/dashboard/: types.ts  (+6 more)
saas/chatbot/lib/: errors.ts  format.ts  logger.ts  types.ts
saas/docs/: ARCH.md  CODING-STANDARDS.md  INFRASTRUCTURE.md  PLAN.md  STACK.md  TAXONOMY.md  VISION.md
scripts/: check-patch-status.sh  extract-models.js  kalshi-market-scan.md  patch-kalshi-mcp.sh
state/: main.py  pyproject.toml
state/state/: cli.py  db.py  performance.py  recommendations.py  scans.py  trades.py
strategies/: fat-tails.md  oil.md  spread-arb.md  volatility-swing.md
x-search/: .env.example  main.py  pyproject.toml
x-search/x_search/: cli.py  client.py  search.py  stream.py
(+113 files in other folders)
