[project]
name = "kalshi-state"
version = "0.1.0"
description = "SQLite state persistence for Kalshi trading strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["state"]

[project.scripts]
kalshi-state = "state.cli:main"
